[tool.poetry]
name = "python-either"
version = "0.1.0"
description = ""
authors = ["codaishin <codaishin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.4.1"
pylint = "^2.17.4"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
